inventory/labcloud.dev.enflame.cn/addon-yml/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.dev.enflame.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
